# wikigit

./: .gitignore  CHANGELOG.md  CLI.md  INSTALL.md  LICENSE  README.md  config.yaml.example  install.sh  package.json  pnpm-lock.yaml  turbo.json  wikigit
apps/: config.yaml.example
apps/api/: .env.example  pyproject.toml
apps/api/app/: main.py
apps/api/app/config/: settings.py
apps/api/app/middleware/: auth.py
apps/api/app/models/: schemas.py
apps/api/app/routers/: articles.py  config.py  directories.py  health.py  media.py  repositories.py  search.py  setup.py
apps/api/app/services/: __init__.py  frontmatter_service.py  git_service.py  github_service.py  multi_repo_git_service.py  repository_service.py  search_service.py  sync_scheduler.py
apps/api/app/utils/: repository_utils.py
apps/web/: next.config.js  package.json  tailwind.config.js
apps/web/app/: layout.tsx  page.tsx
apps/web/app/[...slug]/: page.tsx
apps/web/app/admin/: page.tsx
apps/web/app/new/: page.tsx
apps/web/app/new-folder/: page.tsx
apps/web/app/search/: page.tsx
apps/web/components/admin/: config-manager.tsx  directory-manager.tsx  directory-paths.tsx  git-configuration.tsx  home-page-selector.tsx  search-manager.tsx  sync-settings.tsx
apps/web/components/editor/: editor-toolbar.tsx  index.ts  markdown-editor.tsx
apps/web/components/layout/: header.tsx  index.ts  sidebar.tsx  (+2 more)
apps/web/lib/: README.md  api.ts  store.ts
apps/web/styles/: globals.css  wiki.css
apps/web/types/: api.ts  index.ts
docs/: IMPLEMENTATION_PLAN.md  SRS.md
tmp/: search-resault-exampe.js
(+21 files in other folders)
